--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,5 +1,16 @@
-<ngb-progressbar
-  [type]="'success'"
-  [value]="30"
-  [showValue]="true">
-</ngb-progressbar>
+<section class="layout">
+  <div class="row">
+    <div class="col-12 col-lg-6 text-center">
+      <div class="form-group">
+        <label>Nivel de tamaño: <strong>{{nivelTamannio}}</strong></label>
+        <input type="range" class="form-control" min="1" max="3" [(ngModel)]="nivelTamannio" />
+      </div>
+    </div>
+  </div>
+  <hr>
+  <div [ngClass]="definirNivelTamannio()">
+    <ngb-progressbar [type]="'success'" [value]="30" [showValue]="true" [height]="definirNivelBarraProgreso()">
+    </ngb-progressbar>
+  </div>
+</section>
+
